--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
     font: 1em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #878787;
     margin: 0;
+    text-align: center;
 }
 
 h1 {
