--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ a:active {
 
 .main-header {
   background-color: #ffa949;
-  padding-top: 170px;
+  padding-top: 10.625rem; /* 170px; */
   height: 750px;
   background: linear-gradient(0deg, #fff, transparent 65%),
     #ffa949 url('../img/volcanes.jpg') no-repeat center;
@@ -159,23 +159,43 @@ a:active {
 
 /* Media Queries  -----------------------*/
 
-@media (max-width: 960px) {
+@media (max-width: 768px) {
 
-  
+  .main-header{
+    max-height: 380px;
+    padding: 35px 25px 0;
+  }
 
-}
+  h1{
+    font-size: 3.75rem;
+  }
 
-@media (max-width:480px){
-  .author img{
+  .arrow{
     display:none;
   }
+
+  .author{
+    display:none;
+    width: 0;
+  }
+
+  .quote {
+    width: 100%;
+  }
+
+  body {
+    background: lightblue;
+  }
+
 }
 
+/*
 @media (min-width: 481px) and (max-width: 700px){
   body {
     background: seagreen;
   }
 }
+*/
 
 
 
