--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,12 @@
 body {
   color:  #676767;
   margin: 0;
-  font: 1em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 1em/1.5 "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-align: center;
 }
 
 h1 {  
   font-size: 5.5rem; /* 90px/16px  */
-  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: rgba(255, 255, 255, 1);
   font-weight: normal;
   line-height: 1.3;
@@ -81,14 +80,14 @@ a:active {
 
 .container {
   width: 80%;
-  padding: 50px;
+  padding: 40px;
   margin: auto;
   max-width: 960px;
   font-size: 1.25rem;
 }
 
 .intro {
- font-size:1.5rem;
+ font-size: 1.625rem;
 }
 
 .container .title {
@@ -99,43 +98,47 @@ a:active {
 
 }
 
+.prayer-background{
+  background: url('../img/bricks-lights.jpg') no-repeat center;
+  background-size: cover;
+  height: 300px;
+  color: white;
+  font-size: 1.75rem;
+}
+
+.quote p {
+  font-size: 1.625rem;
+  font-style: italic;
+  margin: 0;
+}
+
 .author{
-  float: left;
-  width: 25%;
-  padding: 0 20px 20px 20px;
+  /*display: block;*/
+  margin-top: 20px;
 }
 
 .author img{
-  width:125px;
+  width: 65px;
   border-radius: 100%;
-}
-
-.quote{
-  float: right;
-  width: 75%;
-  font-size: 1.625rem;
-  font-style: italic;
-  /*padding: 1%;*/
-}
-
-.quote-by {
-  padding: 25px 3px 0 0;
-  text-align: right;
-  font-style:normal;
-  font-weight: bold;
-  font-size: 1.45rem;
-}
-
-.quote-by .more-info {
-  padding-top: 5px;
-  font-weight: normal;
-  font-size: 1.0625rem;
-  color: #676767;
-}
-
-.quote-by p {
   margin: 0;
+  padding: 10px;
+  vertical-align: middle;
+}
+
+.author p {
+  font-weight: bold;
+  font-size: 1.1rem;
   padding: 0px;
+  margin: 0;
+  display: inline-block;
+}
+
+.author p.more-info  {
+  font-weight: normal;
+  font-size: 1rem;
+  color: #383A3F;
+  padding: 3px;
+  margin: 0;
 }
 
 .group:after{
