--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 
-/* Base Styles -------------------- */
+/* ======================================= 
+   Base Styles  
+==========================================*/
 
 * {
   box-sizing: border-box;
@@ -31,7 +33,9 @@ img .circle{
   border-radius: 100%;
 }
 
-/* Pseudo-classes ------------------ */
+/* ======================================= 
+   Pseudo-classes 
+==========================================*/
 
 a:link {
   color: rgb(255, 169, 73);
@@ -51,7 +55,10 @@ a:active {
 }
 
 
-/* Main Styles --------------------- */
+/* ======================================= 
+   Main Styles  
+==========================================*/
+
 
 .main-header {
   background-color: #ffa949;
@@ -171,7 +178,9 @@ p.prayer{
 
 
 
-/* Media Queries  -----------------------*/
+/* ======================================= 
+   Media Queries  
+==========================================*/
 
 @media (max-width: 768px) {
 
