social media footer

--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,9 @@ p.prayer{
   margin-top: 150px;
 }
 
-
+.link-social{
+  margin-right: 5px;
+}
 
 /* ======================================= 
    Media Queries  
