--- a/css/style.css
+++ b/css/style.css
@@ -15,13 +15,14 @@ body {
 }
 
 h1 {  
-  font-size: 5.5rem; /* 90px/16px  */
+  font-size: 7vw; /* 5.5rem; */ /* 90px/16px  */
   color: rgba(255, 255, 255, 1);
   font-weight: normal;
   line-height: 1.3;
   text-shadow: 0 3px 3px rgba(0,0,0,.8);
   max-width: 60%;
   margin: 0 auto;
+  vertical-align: center;
 }
 
 img {
@@ -62,8 +63,9 @@ a:active {
 
 .main-header {
   background-color: #ffa949;
-  padding-top: 10.625rem; /* 170px; */
-  height: 750px;
+  padding-top: 5%; /* 170px; */
+  height: 0;
+  padding-bottom: 40%;
   background: linear-gradient(0deg, #fff, transparent 65%),
     #ffa949 url('../img/volcanes.jpg') no-repeat center;
   background-size: cover;
