--- a/css/style.css
+++ b/css/style.css
@@ -196,6 +196,20 @@ p.prayer{
     margin: 0 auto;
     max-width: 1000px;
   }
+
+  .col {
+    float: left;
+    padding-left: 1em;
+    padding-right: 1em;
+  }
+
+  .primary {
+    width: 60%;
+  }
+
+  .secondary {
+    width: 40%;
+  }
 }
 
 @media (min-width: 1025px){
