--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ body {
   color:  #676767;
   margin: 0;
   font: 1em/1.5 "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  text-align: center;
 }
 
 h1 {  
@@ -182,6 +181,10 @@ p.prayer{
   margin-right: 5px;
 }
 
+.centered {
+  text-align: center;
+}
+
 /* ======================================= 
    Media Queries  
 ==========================================*/
@@ -204,11 +207,11 @@ p.prayer{
   }
 
   .primary {
-    width: 60%;
+    width: 50%;
   }
 
   .secondary {
-    width: 40%;
+    width: 50%;
   }
 }
 
