--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,28 @@ p.prayer{
   text-align: center;
 }
 
+.faq-card {
+  box-shadow: 0 2px 0 rgba(0,0,0,0.06);
+  background: #fff;
+  border-radius: 5px;
+  margin-bottom: 15px;
+  padding: 15px;
+}
+
+.faq-title {
+  line-height: 1.5;
+  font-size: 1.1em;
+  margin: 0 0 10px;
+}
+
+.faq-description {
+  font-size: 0.8em;
+}
+
+ul.faq-description{
+  padding-left: 20px;
+}
+
 /* ======================================= 
    Media Queries  
 ==========================================*/
@@ -213,12 +235,22 @@ p.prayer{
   .secondary {
     width: 50%;
   }
+
+  .faq-card {
+    padding: 20px;
+    margin-bottom: 25px;
+  }
+
 }
 
 @media (min-width: 1025px){
   .container {
     width: 80%;
     max-width: 1150px;
+  }
+
+  .faq-card {
+    margin-bottom: 30px;
   }
 }
 
