--- a/css/style.css
+++ b/css/style.css
@@ -14,20 +14,27 @@ body {
 }
 
 h1 {  
-  font-size: 5vw; /* 5.5rem; */ /* 90px/16px  */
+  font-size: 2.125rem; /* 34px */
   color: rgba(255, 255, 255, 1);
   font-weight: normal;
   line-height: 1.3;
-  text-shadow: 0 3px 3px rgba(0,0,0,.8);
+  text-shadow: 0 1px 1px rgba(0,0,0,.8);
   max-width: 60%;
   margin: 0 auto;
   vertical-align: center;
+  font-family: "Segoe UI Condensed", "Segoe UI", "Segoe WP", Tahoma, Arial, sans-serif;
 }
 
 h2 {
   margin: 0 auto;
   padding-bottom: 4%;
+  font-size: 1.5rem;
 }
+
+h3 {
+  font-size: 1.25rem;
+}
+
 
 img {
   max-width: 100%;
@@ -37,6 +44,22 @@ img {
 img .circle{
   border-radius: 100%;
 }
+
+p {
+  font-size: 1rem;
+}
+
+/* ======================================= 
+   Generic styles 
+==========================================*/
+.centered {
+  text-align: center;
+}
+
+.text-bold {
+  font-weight: 700;
+}
+
 
 /* ======================================= 
    Pseudo-classes 
@@ -70,14 +93,28 @@ a:active {
   padding-top: 5%; /* 170px; */
   height: 0;
   padding-bottom: 40%;
-  background: linear-gradient(0deg, #fff, transparent 65%),
+  background: linear-gradient(0deg, #fff, transparent 80%),
     #ffa949 url('../img/volcanes.jpg') no-repeat center;
   background-size: cover;
 }
 
-.title {
-  color: white;
-  font-size: 1.5em; /* 24px/16px */
+.subheader {
+  
+  background: rgba(255,255,255,0.7);
+  color: rgba(68, 68, 77, 1);
+  text-shadow: 0 1px 1px rgba(255,255,255,.8);
+
+/*
+  background: rgba(12,13,13,0.3);
+  color: rgba(255, 255, 255, 1);
+  text-shadow: 0 1px 1px rgba(0,0,0,.8);
+*/
+  font-weight: 600;
+  /*font-size: 1.45em;*/ 
+  margin-top: 2%;
+  /*max-width: 60%;*/
+  padding: 20px;
+  
 }
 
 .main-content {
@@ -93,7 +130,6 @@ a:active {
 
 .container {
   padding: 1.5em 1em;
-  font-size: 1.25rem;
 }
 
 .intro {
@@ -186,10 +222,6 @@ p.prayer{
   margin-right: 5px;
 }
 
-.centered {
-  text-align: center;
-}
-
 .faq-card {
   box-shadow: 0 2px 0 rgba(0,0,0,0.06);
   background: #fff;
@@ -200,12 +232,7 @@ p.prayer{
 
 .faq-title {
   line-height: 1.5;
-  font-size: 1.1em;
   margin: 0 0 10px;
-}
-
-.faq-description {
-  font-size: 0.8em;
 }
 
 ul.faq-description{
@@ -217,6 +244,14 @@ ul.faq-description{
 ==========================================*/
 
 @media (min-width: 769px) {
+  h1 {
+    font-size: 2.875rem;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+  }
+
   .main-content {
     min-height: 100vh;
   }
@@ -249,6 +284,10 @@ ul.faq-description{
 }
 
 @media (min-width: 1025px){
+  h1 {
+    font-size: 3rem;
+  }
+
   .container {
     width: 80%;
     max-width: 1150px;
