--- a/css/style.css
+++ b/css/style.css
@@ -25,10 +25,15 @@ h1 {
   font-family: "Segoe UI Condensed", "Segoe UI", "Segoe WP", Tahoma, Arial, sans-serif;
 }
 
+h2,
+h3 {
+  color: #383A3F;
+}
+
 h2 {
   margin: 0 auto;
   padding-bottom: 4%;
-  font-size: 1.5rem;
+  font-size: 1.625rem;
 }
 
 h3 {
@@ -246,6 +251,10 @@ ul.faq-description{
 @media (min-width: 769px) {
   h1 {
     font-size: 2.875rem;
+  }
+
+  h2 {
+    font-size: 2.125rem;
   }
 
   h3 {
