--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,9 @@ p {
   font-weight: 700;
 }
 
+.text-semibold {
+  font-weight: 300;
+}
 
 /* ======================================= 
    Pseudo-classes 
@@ -92,7 +95,6 @@ a:active {
    Main Styles  
 ==========================================*/
 
-
 .main-header {
   background-color: #ffa949;
   padding-top: 5%; /* 170px; */
@@ -104,22 +106,12 @@ a:active {
 }
 
 .subheader {
-  
   background: rgba(255,255,255,0.7);
   color: rgba(68, 68, 77, 1);
   text-shadow: 0 1px 1px rgba(255,255,255,.8);
-
-/*
-  background: rgba(12,13,13,0.3);
-  color: rgba(255, 255, 255, 1);
-  text-shadow: 0 1px 1px rgba(0,0,0,.8);
-*/
   font-weight: 600;
-  /*font-size: 1.45em;*/ 
   margin-top: 2%;
-  /*max-width: 60%;*/
   padding: 20px;
-  
 }
 
 .main-content {
@@ -138,7 +130,7 @@ a:active {
 }
 
 .intro {
- font-size: 1.625rem;
+ font-size: 1.25rem;
 }
 
 .container .title {
@@ -166,7 +158,7 @@ p.prayer-by {
 
 p.prayer{
   font-weight: 400;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 
 .quote p {
@@ -271,6 +263,10 @@ ul.faq-description{
     max-width: 1000px;
   }
 
+  p.prayer{
+    font-size: 1.325rem;
+  }
+
   .col {
     float: left;
     padding-left: 1em;
@@ -304,6 +300,10 @@ ul.faq-description{
 
   .faq-card {
     margin-bottom: 30px;
+  }
+
+  p.prayer{
+    font-size: 1.5rem;
   }
 }
 
