add italic font-style

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,10 @@ p {
   border-radius: 100%;
 }
 
+.italic {
+  font-style: italic;
+}
+
 /* ======================================= 
    Pseudo-classes 
 ==========================================*/
