--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ h1 {
   font-weight: normal;
   line-height: 1.3;
   text-shadow: 0 1px 1px rgba(0,0,0,.8);
-  max-width: 60%;
+  max-width: 80%;
   margin: 0 auto;
   vertical-align: center;
   font-family: "Segoe UI Condensed", "Segoe UI", "Segoe WP", Tahoma, Arial, sans-serif;
@@ -381,12 +381,25 @@ ul.faq-description{
 }
 
 @media (min-width: 1400px){
+  h1 {
+    max-width: 45%;
+  }
+  
+  .subheader {
+    margin-top: 5%;
+  }
+
   .intro {
     max-width: 48%;
     font-size: 1.5rem;
   }
 }
 
+@media (min-width: 1700px){
+  h1 {
+    max-width: 35%;
+  }
+}
 
 
 
