--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,10 @@ p {
   text-align: center;
 }
 
+.text-right {
+  text-align: right;
+}
+
 .text-bold {
   font-weight: 700;
 }
@@ -72,6 +76,19 @@ p {
 .italic {
   font-style: italic;
 }
+
+.no-margin-top {
+  margin-top: 0;
+}
+
+.no-margin-bottom {
+  margin-bottom:0;
+}
+
+.no-padding-bottom {
+  padding-bottom: 0;
+}
+
 
 /* ======================================= 
    Pseudo-classes 
@@ -231,6 +248,8 @@ p.prayer{
   margin-right: 5px;
 }
 
+/* FAQ  
+-------------------------------------*/
 .faq-content {
   padding-top: 20px;
 }
@@ -258,6 +277,52 @@ ul.faq-description{
   background: #fff url('../img/retiro.jpg') no-repeat center;
   background-size: cover;
 }
+
+
+/* Welcome  
+-------------------------------------*/
+.welcome{
+  padding-bottom: 0px;
+  display: flex;
+}
+
+.welcome-quote {
+  width: 60%;
+  /*background: lightgreen;*/
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+}
+
+.welcome-quote p {
+  font-size: 1.125rem;
+  font-style: italic;
+}
+
+.welcome-quote-by {
+  bottom: 0;
+  /*background: lightsalmon;*/
+  margin-top: auto;
+  text-align: right;
+}
+
+.welcome-quote-by p {
+  font-size: 1rem;
+  font-style: normal;
+}
+
+.welcome-img {
+  width: 40%;
+  /*background: lightskyblue;*/  
+}
+
+.welcome-img img {
+  padding: 10px 10px 0;
+  margin: 0 auto;
+  display: block;
+}
+
+
 
 /* ======================================= 
    Media Queries  
