--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,11 @@ a:active {
    Main Styles  
 ==========================================*/
 
+h2.invitation {
+  padding-top: 25px;
+  padding-bottom: 0px;
+}
+
 .main-header {
   background-color: #ffa949;
   padding-top: 5%; /* 170px; */
