--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,98 @@ p {
 }
 
 /* ======================================= 
+   Form styles 
+==========================================*/
+
+form {
+  background: #fff;
+  padding: 2em 0.8em 2em;
+  
+  border-radius: 5px;
+}
+
+form label.error {
+  color: #f22432;
+  font-size: 0.98em;
+  padding-top: 5px;
+  padding-left: 7px;
+}
+
+form input.error {
+  border: 1px solid #f22432;
+}
+
+label {
+  display: block;
+  font-size: 1.25em;
+  margin: 0 0 .5em;
+  color: #333;
+}
+
+input {
+  display: block;
+  box-sizing: border-box;
+  width: 100%;
+  outline: none
+}
+
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+input[type="textarea"] {
+  background: #f5f5f5;
+  border: 1px solid #e5e5e5;
+  font-size: 1.125em;
+  padding: .7em .6em;
+  border-radius: 5px;
+}
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="tel"],
+input[type="textarea"]:focus {
+  background: #fff;
+}
+
+input[type="submit"] {
+  background: #2F558E;
+  box-shadow: 0 3px 0 0 #1D3C6A;
+  border-radius: 5px;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  display: block;
+  font-size: 1.6em;
+  line-height: 1.6em;
+  margin: 2em 0 0;
+  outline: none;
+  padding: .8em 0;
+  text-shadow: 0 1px #68B25B;
+}
+
+input[type="submit"]:hover {
+  background: #134693;
+}
+
+form p.form-status {
+    font-size: 1.25em;
+    text-align: center;
+    padding: 13px;
+    margin: 2em 0;
+    display: none;
+}
+
+form p.form-status{
+    background-color: #DFF2BF;
+    border-color: 1px solid #4F8A10;
+    font-weight: bold;
+}
+
+form p.form-status.error{
+    border-color: 1px solid #D8000C;
+    background-color: #FFBABA;
+}
+
+/* ======================================= 
    Generic styles 
 ==========================================*/
 .centered {
@@ -127,7 +219,7 @@ h2.invitation {
   height: 0;
   padding-bottom: 40%;
   background: linear-gradient(0deg, #fff, transparent 80%),
-    #ffa949 url('../img/volcanes.jpg') no-repeat center;
+    #fff url('../img/volcanes.jpg') no-repeat center;
   background-size: cover;
   min-height:375px;
 }
@@ -337,6 +429,7 @@ ul.faq-description{
   .bishop {
     padding-top: 40px;
   }
+  
 }
 
 
@@ -439,6 +532,13 @@ ul.faq-description{
 
   .bishop {
     padding-top: 60px;
+  }
+
+  form{
+    padding: 2em 3.5em 2em;
+    max-width: 550px;
+    margin: 50px auto 60px;
+    box-shadow: 0 0 1em #222;
   }
 
 }
