--- a/css/style.css
+++ b/css/style.css
@@ -14,15 +14,13 @@ body {
 }
 
 h1 {  
-  font-size: 2.125rem; /* 34px */
-  color: rgba(255, 255, 255, 1);
-  font-weight: normal;
-  line-height: 1.3;
-  text-shadow: 0 1px 1px rgba(0,0,0,.8);
+  font-size: 200%; 
+  color: #000;
+  font-family: 'Lato', sans-serif;
+  line-height: 115%;
   max-width: 80%;
-  margin: 0 auto;
+  margin: 2rem auto 2rem;
   vertical-align: center;
-  font-family: "Segoe UI Condensed", "Segoe UI", "Segoe WP", Tahoma, Arial, sans-serif;
 }
 
 h2,
@@ -38,8 +36,15 @@ h2 {
 
 h3 {
   font-size: 1.25rem;
+  margin-bottom: 0;
 }
 
+h4 {
+  font-family: 'Lato', sans-serif;
+  font-size: 100%;
+  margin: 0 auto;
+  color: #333;
+}
 
 img {
   max-width: 100%;
@@ -214,14 +219,12 @@ h2.invitation {
 }
 
 .main-header {
-  background-color: #ffa949;
   padding-top: 5%; /* 170px; */
   height: 0;
   padding-bottom: 40%;
-  background: linear-gradient(0deg, #fff, transparent 80%),
-    #fff url('../img/volcanes.jpg') no-repeat center;
+  background: url('../img/portada_small.jpg') no-repeat center;
   background-size: cover;
-  min-height:375px;
+  min-height:460px;
 }
 
 .subheader {
@@ -256,9 +259,7 @@ h2.invitation {
 }
 
 .prayer-background{
-  background: 
-     /* linear-gradient(0deg, rgba(12,13,13,0.4), rgba(12,13,13,0.4) ), */ 
-      linear-gradient(0deg, rgba(255,255,255,0.4), transparent ), 
+  background: linear-gradient(0deg, rgba(255,255,255,0.4), transparent ), 
      url('../img/bricks-lights.jpg') no-repeat center;
   background-size: cover;
   height: 350px;
@@ -426,20 +427,19 @@ ul.faq-description{
    Media Queries  
 ==========================================*/
 @media (min-width: 460px) {
+
+  h4 {
+    font-size: 125%;
+  }
+
   .bishop {
     padding-top: 40px;
   }
-  
 }
-
 
 @media (min-width: 769px) {
   h1 {
-    font-size: 2.875rem;
-  }
-
-  h1.h1-light {
-    font-size: 2.5rem;   
+    font-size: 250%;
   }
 
   h2 {
@@ -448,6 +448,12 @@ ul.faq-description{
 
   h3 {
     font-size: 1.5rem;
+  }
+
+  .main-header {
+    background: linear-gradient(to bottom, rgba(255,255,255,0.3), transparent 20%), 
+                url('../img/portada.jpg') no-repeat center;
+    background-size: cover;    
   }
 
   .main-content {
@@ -545,7 +551,7 @@ ul.faq-description{
 
 @media (min-width: 1025px){
   h1 {
-    font-size: 3rem;
+    font-size: 260%;
   }
 
   .container {
@@ -585,10 +591,14 @@ ul.faq-description{
 }
 
 @media (min-width: 1400px){
-  h1 {
-    max-width: 45%;
+  h1{
+    font-size: 300%;
   }
-  
+
+  h4 {
+    font-size: 150%;
+  }
+
   .subheader {
     margin-top: 5%;
   }
@@ -599,9 +609,9 @@ ul.faq-description{
   }
 }
 
-@media (min-width: 1700px){
-  h1 {
-    max-width: 35%;
+@media (min-width: 1600px){
+  h1{
+    font-size: 350%;
   }
 }
 
