--- a/css/style.css
+++ b/css/style.css
@@ -228,13 +228,11 @@ h2.invitation {
 }
 
 .subheader {
-  background: rgba(255,255,255,0.7);
+  background: #f5be58;
   color: rgba(68, 68, 77, 1);
-  text-shadow: 0 1px 1px rgba(255,255,255,.8);
   font-weight: 600;
-  margin-top: 7%;
-  padding: 20px;
-  margin-bottom:20px;
+  padding: 0.85rem;
+  margin: 25px 0 25px;
 }
 
 .main-content {
@@ -597,10 +595,6 @@ ul.faq-description{
 
   h4 {
     font-size: 150%;
-  }
-
-  .subheader {
-    margin-top: 5%;
   }
 
   .intro {
