--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,8 @@ h3 {
 }
 
 h2 {
-  margin: 0 auto;
-  padding: 2% 0;
   font-size: 1.625rem;
+  padding-bottom: 3rem;
 }
 
 h3 {
@@ -39,20 +38,18 @@ h3 {
   margin-bottom: 0;
 }
 
-h4 {
-  font-family: 'Lato', sans-serif;
-  font-size: 100%;
-  margin: 0 auto;
-  color: #333;
-}
-
 img {
   max-width: 100%;
   margin-bottom: 20px;
 }
 
-p {
-  font-size: 1rem;
+.row-padded {
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.row-bordered {
+  border-top: 1px solid #eee;
 }
 
 /* ======================================= 
@@ -151,9 +148,6 @@ form.splash-form  p.form-status.error{
 /* ======================================= 
    Generic styles 
 ==========================================*/
-.centered {
-  text-align: center;
-}
 
 .text-right {
   text-align: right;
@@ -191,6 +185,10 @@ form.splash-form  p.form-status.error{
   color: #4F8A10;
 }
 
+.fa-1-5x {
+  font-size: 1.5rem;
+}
+
 .error {
   color: #D8000C;
 }
@@ -202,28 +200,7 @@ form.splash-form  p.form-status.error{
   border-image: url(../img/stripes.png) 9 round;     
   width: 98%;
 }
-/*
-.striped-border {
-  position: relative;
-  display: inline-block;
-  width: 98%;
-}
 
-.striped-border::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    border: 5px solid transparent;
-    -o-border-image: url(../img/stripes.png) 9 round;  
-    -webkit-border-image: url(../img/stripes.png) 9 round; 
-    border-image: url(../img/stripes.png) 9 round;     
-    transform: translate(-5px, -5px);
-    opacity: 0.4;
-}
-*/
 .o-4 {
   opacity: 0.4;
 }
@@ -254,9 +231,17 @@ a:active {
    Main Styles  
 ==========================================*/
 
-h2.invitation {
-  padding-top: 25px;
-  padding-bottom: 0px;
+.featurette {
+  margin: 3.25rem  0;
+}
+
+.divider {
+  border-top: 1px solid #eee;
+}
+
+hr {
+  height: 0;
+  border: 0;
 }
 
 .main-header {
@@ -286,8 +271,12 @@ h2.invitation {
 }
 
 .background-dark{
-  background-color: #f1f3f5;
+  background-color: #21627c; /* #f1f3f5;*/
   color: #F5F5F5; 
+}
+
+.background-dark h2 {
+  color: white;
 }
 
 .main-header .container {
@@ -364,17 +353,12 @@ p.prayer{
 }
 
 .main-footer {
-  background-color: #F5F5F5;
+  background-color: #171717;
   border-top: 1px solid #D2D2D2;
   color: #9DA2A6;
   padding-top: 20px;
   padding-bottom: 20px;  
-  height: 70px;
-}
-
-.arrow {
-  width: 50px;
-  margin-top: 150px;
+  height: 100px;
 }
 
 .book-cover {
@@ -394,6 +378,14 @@ p.prayer{
 /* Signup  
 -------------------------------------*/
 
+.panel {
+  border: 1px solid transparent;
+  border-radius: 4px;
+  border-color: #ddd;
+  box-shadow: 0 2px 15px rgba(0,0,0,.1);
+  border-top: 5px solid #19cf86;/*#68B25B; *//*#21627c;*/
+}
+
 .inline-form {
   width: 100%;
   margin: 30px auto 0;
@@ -405,7 +397,7 @@ p.prayer{
   background: #fff;
   border: 0px;
   border-bottom: 1px solid #e5e5e5;
-  font-size: 1.125em;
+  font-size: 1.025em;
   padding: .7em .6em;
   width: 100%;
   flex: 1;
@@ -446,6 +438,10 @@ p.prayer{
 .faq-title {
   line-height: 1.5;
   margin: 0 0 10px;
+}
+
+.faq-description {
+  text-align: left;
 }
 
 ul.faq-description{
@@ -565,18 +561,6 @@ ul.faq-description{
     margin-bottom: 25px;
   }
 
-  .feat-image {
-    float: left;
-    width: 310px;
-    margin-top: 5px;
-    margin-right: 25px;
-    margin-bottom: 25px;
-    padding: 5px;
-    border-style: solid;
-    border-color: rgb(217,228,234);
-    border-image:initial;
-  }
-
   .primary,
   .secondary {
     width: 50%;
@@ -621,6 +605,10 @@ ul.faq-description{
 
   .bishop {
     padding-top: 60px;
+  }
+
+  form label {
+    text-align: left;
   }
 
   form.splash-form {
